Set up links and pages to css practice
Work on the intro to CSS section in TOP.  Add following exercises:

  - External CSS
  - Internal CSS
  - Inline CSS

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -12,5 +12,12 @@
 
     <img src="./images/dog.jpg" alt="Pug dog in a sweater on a yellow background" width="320">
 
+    <h2>CSS Practice pages</h2>
+    <ul>
+      <li><a href="./pages/externalcss.html" target="_blank">External CSS</a> </li>
+      <li><a href="./pages/internalcss.html" target="_blank">Internal CSS</a> </li>
+      <li><a href="./pages/inlinecss.html" target="_blank">Inline CSS</a> </li>
+    </ul>
+
   </body>
 </html>
