--- a/odin-links-and-images/pages/externalcss.html
+++ b/odin-links-and-images/pages/externalcss.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+    <div>This is changed by an external style method</div>
+    <p>This is changed by an internal style method</p>
+    <button>Inline Method</button>
   </body>
 </html>
