--- a/odin-links-and-images/pages/externalcss.html
+++ b/odin-links-and-images/pages/externalcss.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <style>
+      p {
+        color: white;
+        background-color: green;
+        font-size: 18px;
+      }
+    </style>
     <title>External CSS practice page</title>
   </head>
   <body>
     <h1>Hello World!</h1>
-    <div>This is changed by an external style method</div>
-    <p>This is changed by an internal style method</p>
-    <button>Inline Method</button>
+    <div>External style method</div>
+    <p>Internal style method</p>
+    <button style="background-color: orange; font-size:18px;">Inline Method</button>
   </body>
 </html>
