Update link after file rename

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -14,7 +14,7 @@
 
     <h2>CSS Practice Page</h2>
     <ul>
-      <li><a href="./pages/externalcss.html" target="_blank">External CSS</a> </li>
+      <li><a href="./pages/csspractice.html" target="_blank">External CSS</a> </li>
     </ul>
 
   </body>
