--- a/odin-links-and-images/pages/csspractice.html
+++ b/odin-links-and-images/pages/csspractice.html
@@ -18,10 +18,10 @@
     <p>Internal style method</p>
     <button style="background-color: orange; font-size:18px;">Inline Method</button>
 
-    <p class="odd one">Number 1 - I'm a class!</p>
-    <p id="two">Number 2 - I'm one ID.</p>
+    <p class="odd">Number 1 - I'm a class!</p>
+    <div id="two">Number 2 - I'm one ID.</p>
     <p class="odd three">Number 3 - I'm a class, but cooler!</p>
-    <p id="four">Number 4 - I'm another ID.</p>
-    <p class="odd five">Number 5 - I'm a class!</p>
+    <div id="four">Number 4 - I'm another ID.</p>
+    <p class="odd">Number 5 - I'm a class!</p>
   </body>
 </html>
