--- a/odin-links-and-images/pages/csspractice.html
+++ b/odin-links-and-images/pages/csspractice.html
@@ -23,5 +23,8 @@
     <p class="odd three">Number 3 - I'm a class, but cooler!</p>
     <div id="four">Number 4 - I'm another ID.</p>
     <p class="odd">Number 5 - I'm a class!</p>
+    <br><br>
+    <button class="clicker black_button">Click Me!</button>
+    <button class="clicker yellow_button">No, Click Me!</button>
   </body>
 </html>
