Add and clean clicker elements
Add two buttons and ensure:
  - Left button is black bg with white text
  - Right button is yellow bg with black text
  - Both buttons share font settings

Assign a div to block previous inline style.

--- a/odin-links-and-images/pages/csspractice.html
+++ b/odin-links-and-images/pages/csspractice.html
@@ -21,10 +21,11 @@
     <p class="odd">Number 1 - I'm a class!</p>
     <div id="two">Number 2 - I'm one ID.</p>
     <p class="odd three">Number 3 - I'm a class, but cooler!</p>
-    <div id="four">Number 4 - I'm another ID.</p>
+    <div id="four">Number 4 - I'm another ID.</p></div>
     <p class="odd">Number 5 - I'm a class!</p>
-    <br><br>
+    <div class="nobg"><br><br>
     <button class="clicker black_button">Click Me!</button>
     <button class="clicker yellow_button">No, Click Me!</button>
+    </div>
   </body>
 </html>
