Add link and change text

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -12,9 +12,10 @@
 
     <img src="./images/dog.jpg" alt="Pug dog in a sweater on a yellow background" width="320">
 
-    <h2>CSS Practice Page</h2>
+    <h2>CSS Practice Pages</h2>
     <ul>
-      <li><a href="./pages/csspractice.html" target="_blank">External CSS</a> </li>
+      <li><a href="./pages/csspractice.html" target="_blank">Working with various elements</a> </li>
+      <li><a href="./pages/chainingselectors.html" target="_blank">External Selectors</a></li>
     </ul>
 
   </body>
