--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -16,6 +16,7 @@
     <ul>
       <li><a href="./pages/csspractice.html" target="_blank">Working with various elements</a> </li>
       <li><a href="./pages/chainingselectors.html" target="_blank">External Selectors</a></li>
+      <li><a href="./pages/descendantcombinators.html" target="_blank">Descendant Combinators</a></li>
     </ul>
 
   </body>
