--- a/odin-links-and-images/pages/descendantcombinators.html
+++ b/odin-links-and-images/pages/descendantcombinators.html
@@ -12,7 +12,7 @@
     </div>
     <p class="text"> This should be unstyled.</p>
     <p class="text"> This should be unstyled.</p>
-    <div class="contianer">
+    <div class="container">
       <p class="text">This should be styled.</p>
       <p class="text">This should be styled.</p>
     </div>
