Add missing class

--- a/odin-links-and-images/pages/descendantcombinators.html
+++ b/odin-links-and-images/pages/descendantcombinators.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="container">
-      <p> This should be styled.</p>
+      <p class="text"> This should be styled.</p>
     </div>
     <p class="text"> This should be unstyled.</p>
     <p class="text"> This should be unstyled.</p>
