--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -17,6 +17,7 @@
       <li><a href="./pages/csspractice.html" target="_blank">Working with various elements</a> </li>
       <li><a href="./pages/chainingselectors.html" target="_blank">External Selectors</a></li>
       <li><a href="./pages/descendantcombinators.html" target="_blank">Descendant Combinators</a></li>
+      <li><a href="./pages/cascadefix.html" target="_blank">Cascade Fix</a></li>
     </ul>
 
   </body>
