--- a/odin-links-and-images/pages/flexboxexample.html
+++ b/odin-links-and-images/pages/flexboxexample.html
@@ -33,6 +33,18 @@
 
       /* Add your flexbox CSS below here */
 
+      section {
+        display: flex;
+      }
+
+      article {
+        flex: 1 200px;
+      }
+
+      article:nth-of-type(3) {
+        flex: 2 200px;
+      }
+
 
       
     </style>
