--- a/odin-links-and-images/pages/flex-align.html
+++ b/odin-links-and-images/pages/flex-align.html
@@ -27,7 +27,12 @@
       }
 
       /* Add your flexbox CSS below here */
-
+      div {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+      }
+      
       
     </style>
   </head>
