--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -9,12 +9,13 @@
     <title>Link and Images Practice</title>
   </head>
   <body>
-    <h1>Homepage</h1>
+    <h1>Jamie's Odin Project Practice</h1>
+    <img class="w3-circle" src="./images/dog.jpg" alt="Pug dog in a sweater on a yellow background" width="320">
+    <br><br>
     <a href="https://www.theodinproject.com/about" target="_blank">click me</a>
 
     <a href="./pages/about.html">About</a>
 
-    <img src="./images/dog.jpg" alt="Pug dog in a sweater on a yellow background" width="320">
 
     <h2>CSS Practice Pages</h2>
     <ul>
