Apply style to image

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>Jamie's Odin Project Practice</h1>
-    <img class="w3-circle" src="./images/dog.jpg" alt="Pug dog in a sweater on a yellow background" width="320">
+    <img class="center" src="./images/dog.jpg" alt="Pug dog in a sweater on a yellow background" width="320">
     <br><br>
     <a href="https://www.theodinproject.com/about" target="_blank">click me</a>
 
