Move links to footer

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -12,9 +12,6 @@
     <h1>Jamie's Odin Project Practice</h1>
     <img class="center" src="./images/dog.jpg" alt="Pug dog in a sweater on a yellow background" width="320">
     <br><br>
-    <a href="https://www.theodinproject.com/about" target="_blank">click me</a>
-
-    <a href="./pages/about.html">About</a>
 
 
     <h2>CSS Practice Pages</h2>
@@ -28,4 +25,8 @@
     </ul>
 
   </body>
+  <footer>
+    <a href="https://www.theodinproject.com/about" target="_blank">The Odin Project</a>
+    <a href="./pages/about.html">About</a>
+  </footer>
 </html>
