Implement header section and format document
Move the first H1 and image into <header> tags.
Enable prettier to run on save.

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -1,32 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./pages/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="./pages/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Link and Images Practice</title>
   </head>
   <body>
-    <h1>Jamie's Odin Project Practice</h1>
-    <img class="center" src="./images/dog.jpg" alt="Pug dog in a sweater on a yellow background" width="320">
-    <br><br>
-
+    <header>
+      <h1>Jamie's Odin Project Practice</h1>
+      <img
+        class="center"
+        src="./images/dog.jpg"
+        alt="Pug dog in a sweater on a yellow background"
+        width="320"
+      />
+    </header>
+    <br /><br />
 
     <h2>CSS Practice Pages</h2>
     <ul>
-      <li><a href="./pages/csspractice.html" target="_blank">Working with various elements</a> </li>
-      <li><a href="./pages/chainingselectors.html" target="_blank">External Selectors</a></li>
-      <li><a href="./pages/descendantcombinators.html" target="_blank">Descendant Combinators</a></li>
+      <li>
+        <a href="./pages/csspractice.html" target="_blank"
+          >Working with various elements</a
+        >
+      </li>
+      <li>
+        <a href="./pages/chainingselectors.html" target="_blank"
+          >External Selectors</a
+        >
+      </li>
+      <li>
+        <a href="./pages/descendantcombinators.html" target="_blank"
+          >Descendant Combinators</a
+        >
+      </li>
       <li><a href="./pages/cascadefix.html" target="_blank">Cascade Fix</a></li>
-      <li><a href="./pages/flexboxexample.html" target="_blank">Flexbox Example</a></li>
-      <li><a href="./pages/flex-align.html" target="_blank">Flex Align Example</a></li>
+      <li>
+        <a href="./pages/flexboxexample.html" target="_blank"
+          >Flexbox Example</a
+        >
+      </li>
+      <li>
+        <a href="./pages/flex-align.html" target="_blank">Flex Align Example</a>
+      </li>
     </ul>
-
   </body>
   <footer>
-    <a href="https://www.theodinproject.com/about" target="_blank">The Odin Project</a>
+    <a href="https://www.theodinproject.com/about" target="_blank"
+      >The Odin Project</a
+    >
     <a href="./pages/about.html">About</a>
   </footer>
 </html>
