Individualize stylesheet.  Add styling

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./pages/style.css" />
+    <link rel="stylesheet" href="./stylesheets/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,49 +12,58 @@
     <title>Link and Images Practice</title>
   </head>
   <body>
-    <header>
-      <h1>Jamie's Odin Project Practice</h1>
-      <img
-        class="center"
-        src="./images/dog.jpg"
-        alt="Pug dog in a sweater on a yellow background"
-        width="320"
-      />
-    </header>
+    <div class="container">
+      <header>
+        <h1>Jamie's Odin Project Practice</h1>
+        <img
+          class="center"
+          src="./images/dog.jpg"
+          alt="Pug dog in a sweater on
+        a yellow background"
+        />
+      </header>
+    </div>
     <br /><br />
 
-    <h2>CSS Practice Pages</h2>
-    <ul>
-      <li>
-        <a href="./pages/csspractice.html" target="_blank"
-          >Working with various elements</a
-        >
-      </li>
-      <li>
-        <a href="./pages/chainingselectors.html" target="_blank"
-          >External Selectors</a
-        >
-      </li>
-      <li>
-        <a href="./pages/descendantcombinators.html" target="_blank"
-          >Descendant Combinators</a
-        >
-      </li>
-      <li><a href="./pages/cascadefix.html" target="_blank">Cascade Fix</a></li>
-      <li>
-        <a href="./pages/flexboxexample.html" target="_blank"
-          >Flexbox Example</a
-        >
-      </li>
-      <li>
-        <a href="./pages/flex-align.html" target="_blank">Flex Align Example</a>
-      </li>
-    </ul>
+    <div class="">
+      <h2>CSS Practice Pages</h2>
+      <ul>
+        <li>
+          <a href="./pages/csspractice.html" target="_blank"
+            >Working with various elements</a
+          >
+        </li>
+        <li>
+          <a href="./pages/chainingselectors.html" target="_blank"
+            >External Selectors</a
+          >
+        </li>
+        <li>
+          <a href="./pages/descendantcombinators.html" target="_blank"
+            >Descendant Combinators</a
+          >
+        </li>
+        <li>
+          <a href="./pages/cascadefix.html" target="_blank">Cascade Fix</a>
+        </li>
+        <li>
+          <a href="./pages/flexboxexample.html" target="_blank"
+            >Flexbox Example</a
+          >
+        </li>
+        <li>
+          <a href="./pages/flex-align.html" target="_blank"
+            >Flex Align Example</a
+          >
+        </li>
+      </ul>
+    </div>
+
+    <footer>
+      <a href="https://www.theodinproject.com/about" target="_blank"
+        >The Odin Project</a
+      >
+      <a href="./pages/about.html">About</a>
+    </footer>
   </body>
-  <footer>
-    <a href="https://www.theodinproject.com/about" target="_blank"
-      >The Odin Project</a
-    >
-    <a href="./pages/about.html">About</a>
-  </footer>
 </html>
