Create and commit js foundations page
Assignment from JS foundations to create three functions
Link foundation page to index page for easy navigation.

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -25,7 +25,7 @@
     </div>
     <br /><br />
 
-    <div class="">
+    <div id="css-practice">
       <h2>CSS Practice Pages</h2>
       <ul>
         <li>
@@ -55,6 +55,15 @@
           <a href="./pages/flex-align.html" target="_blank"
             >Flex Align Example</a
           >
+        </li>
+      </ul>
+    </div>
+
+    <div id="javascript-practice">
+      <h2>Javascript Practice</h2>
+      <ul>
+        <li>
+          <a href="./pages/js-foundations.html" target="_blank">Foundation 1</a>
         </li>
       </ul>
     </div>
