--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -65,6 +65,9 @@
         <li>
           <a href="./pages/js-foundations.html" target="_blank">Foundation 1</a>
         </li>
+        <li>
+          <a href="./pages/fizzbuzz.html" target="_blank">FizzBuzz</a>
+        </li>
       </ul>
     </div>
 
